Fix folders on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -174,6 +174,10 @@
         overflow: visible !important;
     }
 
+    .dg ul.closed li.cr {
+        display: none;
+    }
+
     .dg .property-name {
         width: 40% !important;
         font-size: 14px !important;
